--- a/libs/angular-theme/lib/core/_core.scss
+++ b/libs/angular-theme/lib/core/_core.scss
@@ -1,9 +1,12 @@
 @use '@angular/material' as mat;
 @use './typography/all-typography' as uxg-typography;
 @use './style/spacing';
+@use './layout/flex';
 
 @mixin uxg-core() {
   @include mat.core();
   @include uxg-typography.uxg-material-typography();
+
   @include spacing.helper-classes();
+  @include flex.flex-size-classes();
 }
