--- a/libs/angular-theme/lib/breadcrumb/_breadcrumb-theme.scss
+++ b/libs/angular-theme/lib/breadcrumb/_breadcrumb-theme.scss
@@ -1,40 +1,38 @@
-@use 'sass:map';
 @use '@angular/material' as mat;
+@use '@finastra/fds-theme/color' as fds;
+@use '@finastra/fds-theme/typography' as typo;
 
-@mixin theme($theme) {
-  $primary: map.get($theme, primary);
-  $accent: map.get($theme, accent);
-  $foreground: map.get($theme, foreground);
+  @mixin color() {
 
   .uxg-breadcrumb {
     a {
-      color: map.get($foreground, text);
+      @include fds.color(foreground);
       text-decoration: none;
     }
 
     &[color='primary'] {
-      color: mat.get-color-from-palette($primary, default);
+      @include fds.color(primary);
 
       a {
-        color: mat.get-color-from-palette($primary, default);
+        @include fds.color(primary);
         text-decoration: none;
       }
 
       .mat-flat-button {
-        color: mat.get-color-from-palette($primary, default);
+        @include fds.color(primary);
       }
     }
 
     &[color='accent'] {
-      color: mat.get-color-from-palette($accent, default);
+      @include fds.color(accent);
 
       a {
-        color: mat.get-color-from-palette($accent, default);
+        @include fds.color(accent);
         text-decoration: none;
       }
 
       .mat-flat-button {
-        color: mat.get-color-from-palette($primary, default);
+        @include fds.color(primary);
       }
     }
   }
@@ -42,14 +40,19 @@
 
 @mixin typography($config) {
   .uxg-breadcrumb {
-    @include mat.typography-level($config, body-2);
+    @include typo.typography(body-2);
 
     .mat-flat-button {
-      @include mat.typography-level($config, body-2);
+      @include typo.typography(body-2);
     }
   }
 
   .uxg-breadcrumb[dense] {
-    @include mat.typography-level($config, caption);
+    @include typo.typography(caption);
   }
+}
+
+@mixin theme($typography-config) {
+  @include color();
+  @include typography($typography-config);
 }
