--- a/libs/angular-theme/lib/prebuilt-theme/_light.scss
+++ b/libs/angular-theme/lib/prebuilt-theme/_light.scss
@@ -6,6 +6,7 @@
 @forward '../core/style/spacing';
 
 @use '../avatar/avatar-theme' as avatar;
+@use './lib/breadcrumb/breadcrumb-theme' as breadcrumb;
 @use '../icon/icon-theme' as icon;
 @use '../link/link-theme' as link;
 
@@ -24,6 +25,7 @@ $light-theme: mat.define-light-theme(
 );
 
 @include avatar.color();
+@include breadcrumb.theme($typography-config);
 @include icon.color();
 @include link.color();
 
