--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -1,6 +1,7 @@
 @import './lib/avatar/avatar';
 @import './lib/button-toggle/button-toggle';
 @import './lib/chips/chips';
+@import './lib/badge/badge';
 @import './lib/breadcrumb/breadcrumb';
 @import './lib/button/button';
 @import './lib/icon/icon';
