--- a/libs/angular-theme/_index.scss
+++ b/libs/angular-theme/_index.scss
@@ -10,6 +10,7 @@
 
 @use './lib/avatar/avatar-theme' as avatar;
 @use './lib/button-toggle/button-toggle-theme' as button-toggle;
+@use './lib/badge/badge-theme' as badge;
 @use './lib/chips/chips-theme' as chips;
 @use './lib/icon/icon-theme' as icon;
 @use './lib/link/link-theme' as link;
@@ -51,7 +52,8 @@ $light-theme: mat.define-light-theme(
 
 @include avatar.theme();
 @include button-toggle.theme($typography-config);
-@include chips.theme($typography-config);
+@include badge.theme();
+@include chips.theme();
 @include icon.color();
 @include link.color();
 @include button.theme();
