--- a/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
+++ b/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
@@ -251,7 +251,7 @@
   <div class="example-row card-basic-test">
     <mat-card class="example-card">
       <mat-card-header>
-        <img mat-card-avatar src="https://randomuser.me/api/portraits/women/36.jpg" class="uxg-avatar" />
+        <img mat-card-avatar src="https://randomuser.me/api/portraits/women/36.jpg" />
         <mat-card-title>Open Innovation</mat-card-title>
         <mat-card-subtitle>Rachelle Ross</mat-card-subtitle>
       </mat-card-header>
@@ -274,8 +274,10 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAoGVRDsE54AMV1QYasu_H0M868g8fmS4_i9cz5G-U9JgYc96pwg" />
       </div>
 
-      <mat-card-title>New Age in Finance</mat-card-title>
-      <mat-card-subtitle>Risk Management</mat-card-subtitle>
+      <mat-card-header>
+        <mat-card-title>New Age in Finance</mat-card-title>
+        <mat-card-subtitle>Risk Management</mat-card-subtitle>
+      </mat-card-header>
 
       <mat-card-actions>
         <ul class="uxg-avatar-list" dense>
@@ -309,13 +311,13 @@
   </div>
 
   <div class="example-row card-product-test">
-    <mat-card class="uxg-card-product" large>
+    <mat-card class="uxg-card-product mr-4" large>
       <span class="uxg-h1 uxg-card-product-name">PRO</span>
     </mat-card>
-    <mat-card class="uxg-card-product">
+    <mat-card class="uxg-card-product mr-4">
       <span class="uxg-h3 uxg-card-product-name">PRO</span>
     </mat-card>
-    <mat-card class="uxg-card-product" dense>
+    <mat-card class="uxg-card-product mr-4" dense>
       <span class="uxg-h4 uxg-card-product-name">PRO</span>
     </mat-card>
     <mat-card class="uxg-card-product" extra-dense>
@@ -324,13 +326,13 @@
   </div>
 
   <div class="example-row card-solution-test">
-    <mat-card class="uxg-card-solution" large>
+    <mat-card class="uxg-card-solution mr-4" large>
       <span class="uxg-h1 uxg-card-solution-name">SOL</span>
     </mat-card>
-    <mat-card class="uxg-card-solution">
+    <mat-card class="uxg-card-solution mr-4">
       <span class="uxg-h3 uxg-card-solution-name">SOL</span>
     </mat-card>
-    <mat-card class="uxg-card-solution" dense>
+    <mat-card class="uxg-card-solution mr-4" dense>
       <span class="uxg-h4 uxg-card-solution-name">SOL</span>
     </mat-card>
     <mat-card class="uxg-card-solution" extra-dense>
