--- a/libs/angular-theme/lib/card/_card.scss
+++ b/libs/angular-theme/lib/card/_card.scss
@@ -1,8 +1,9 @@
 /* stylelint-disable no-invalid-position-at-import-rule */
-@use '@angular/material' as mat;
 @use '../core/style/spacing' as *;
 
-$mat-card-padding: $uxg-spacing-3;
+@use '@finastra/fds-theme/color' as color;
+@use '@finastra/fds-theme/typography' as typography;
+@use '@finastra/fds-theme/spacing' as spacing;
 
 @mixin mat-card-actions {
   display: flex;
@@ -22,27 +23,17 @@ $mat-card-padding: $uxg-spacing-3;
   }
 }
 
-@mixin uxg-card-size($width, $height: false) {
-  width: $width - ($mat-card-padding * 2);
-
-  @if $height {
-    height: $height - ($mat-card-padding * 2);
-  }
-}
-
-.mat-card {
-  padding: $mat-card-padding;
-
+.mat-mdc-card {
   .uxg-card-image-overlay {
     position: relative;
-    margin: 0 (-$mat-card-padding) $uxg-spacing-3 (-$mat-card-padding);
-    width: calc(100% + #{$mat-card-padding * 2});
+    // margin: 0 (-$mat-card-padding) $uxg-spacing-3 (-$mat-card-padding);
+    // width: calc(100% + #{$mat-card-padding * 2});
     display: block;
 
     &:first-of-type {
       border-top-left-radius: inherit;
       border-top-right-radius: inherit;
-      margin-top: -$mat-card-padding !important;
+      // margin-top: -$mat-card-padding !important;
     }
 
     img {
@@ -64,47 +55,53 @@ $mat-card-padding: $uxg-spacing-3;
     }
   }
 
-  .mat-card-actions {
+  .mat-mdc-card-content {
+    @include typography.typography(body-2);
+    // @include color.color(on-surface-medium);
+    @include spacing.margin(3, bottom);
+  }
+
+  .mat-mdc-card-actions {
     @include mat-card-actions();
   }
 
   &[dense] {
-    @include uxg-card-size(210);
+    width: 210px;
   }
 }
 
-.uxg-card-product.mat-card {
+.uxg-card-product.mat-mdc-card {
   .uxg-card-product-name {
-    top: 22%;
+    top: 30%;
   }
 }
 
-.uxg-card-solution.mat-card {
+.uxg-card-solution.mat-mdc-card {
   .uxg-card-solution-name {
     top: 35%;
   }
 }
 
-.uxg-card-product.mat-card,
-.uxg-card-solution.mat-card {
-  @include uxg-card-size(160px, 120px);
+.uxg-card-product.mat-mdc-card,
+.uxg-card-solution.mat-mdc-card {
+  width: 160px;
+  height: 120px;
 
   text-align: center;
 
-  &:not([class*='mat-elevation-z']) {
-    @include mat.elevation(4);
-  }
-
   &[extra-dense] {
-    @include uxg-card-size(100px, 70px);
+    width: 100px;
+    height: 70px;
   }
 
   &[dense] {
-    @include uxg-card-size(120px, 90px);
+    width: 120px;
+    height: 90px;
   }
 
   &[large] {
-    @include uxg-card-size(320px, 240px);
+    width: 320px;
+    height: 240px;
   }
 
   .uxg-card-product-name,
