--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -7,12 +7,12 @@
 @use '@finastra/fds-theme/typography/mixins' as typography;
 
 @use '../../avatar/avatar-theme';
-// @use '../../badge/badge-theme';
+@use '../../badge/badge-theme';
 @use '../../button/button-theme';
-// @use '../../button-toggle/button-toggle-theme';
+@use '../../button-toggle/button-toggle-theme';
 @use '../../breadcrumb/breadcrumb-theme';
 // @use '../../card/card-theme';
-// @use '../../chips/chips-theme';
+@use '../../chips/chips-theme';
 // @use '../../expansion/expansion-theme';
 // @use '../../form-field/form-field-theme';
 @use '../../icon/icon-theme';
@@ -71,12 +71,12 @@
 
   @include uxg-core-theme($theme);
   @include avatar-theme.theme($theme);
-  // @include badge-theme.theme($theme);
+  @include badge-theme.theme($theme);
   @include button-theme.theme($theme);
-  // @include button-toggle-theme.theme($theme);
+  @include button-toggle-theme.theme($theme);
   // @include breadcrumb-theme.theme($theme);
   // @include card-theme.theme($theme);
-  // @include chips-theme.theme($theme);
+  @include chips-theme.theme($theme);
   // @include expansion-theme.theme($theme);
   // @include form-field-theme.theme($theme);
   @include icon-theme.theme($theme);
