--- a/libs/angular-theme/lib/breadcrumb/_breadcrumb.scss
+++ b/libs/angular-theme/lib/breadcrumb/_breadcrumb.scss
@@ -62,12 +62,12 @@ $back-button-icon-size: 18px;
 }
 
 .uxg-breadcrumb-menu {
-  .uxg-nav-list.mat-nav-list.mat-list-base > .mat-list-item:last-of-type,
-  .uxg-nav-list-level.mat-nav-list.mat-list-base > .mat-list-item:last-of-type {
+  .mat-mdc-nav-list.mat-mdc-nav-list.mat-mdc-list-base > .mdc-list-item:last-of-type,
+  .uxg-nav-list-level.mat-mdc-nav-list.mat-mdc-list-base > .mdc-list-item:last-of-type {
     margin-bottom: 0 !important;
   }
 
-  .mat-list-base {
+  .mat-mdc-list-base {
     padding-top: 0 !important;
   }
 }
