--- a/libs/angular-theme/lib/list/_list-base.scss
+++ b/libs/angular-theme/lib/list/_list-base.scss
@@ -1,10 +1,8 @@
 @use '../core/style/spacing' as *;
 
-// uxg-link-list
 $uxg-link-list-item-height: 35px;
 $uxg-link-list-icon-size: 18px;
 
-// uxg-nav-list
 $uxg-nav-list-level-icon-size: 18px;
 $uxg-nav-list-level-height: 48px;
 
@@ -46,28 +44,29 @@ $uxg-nav-list-level-height: 48px;
   }
 }
 
-.uxg-nav-list-level.mat-nav-list.mat-list-base {
-  & > .mat-list-item {
+.uxg-nav-list-level.mat-mdc-nav-list.mat-mdc-list-base {
+  & > .mat-mdc-list-item {
     height: $uxg-nav-list-level-height;
 
     .mat-icon {
       width: $uxg-nav-list-level-icon-size;
       height: $uxg-nav-list-level-icon-size;
       font-size: $uxg-nav-list-level-icon-size;
+      position: fixed;
     }
   }
 }
 
-.mat-nav-list.mat-list-base {
+  .mat-mdc-nav-list.mat-mdc-list-base {
   &.uxg-link-list {
-    .mat-list-item {
+    .mat-mdc-list-item {
       height: $uxg-link-list-item-height;
 
       .mat-icon:first-of-type {
         margin-right: 8px;
       }
 
-      .mat-list-item-content {
+      .mdc-list-item__content {
         padding: 0 28px;
 
         .mat-icon {
@@ -81,11 +80,10 @@ $uxg-nav-list-level-height: 48px;
 
   &.uxg-nav-list,
   &.uxg-nav-list-level {
-    & > .mat-list-item {
+    & > .mat-mdc-list-item {
       box-sizing: border-box;
-      padding-left: 0;
+      padding-left: 10px;
       border-left-width: 11px;
-      border-left-style: solid;
 
       .mat-icon:first-of-type {
         margin-right: 14px;
@@ -95,7 +93,7 @@ $uxg-nav-list-level-height: 48px;
         margin-bottom: 30px;
       }
 
-      .mat-list-item-content {
+      .mat-mdc-list-item__content {
         .mat-icon:nth-last-child(1) {
           position: absolute;
           right: 20px;
@@ -105,7 +103,7 @@ $uxg-nav-list-level-height: 48px;
   }
 }
 
-.mat-list-base {
+.mat-mdc-list-base {
   .mat-divider {
     margin: 0 10px;
   }
