--- a/libs/angular-theme/lib/list/_list-theme.scss
+++ b/libs/angular-theme/lib/list/_list-theme.scss
@@ -1,22 +1,19 @@
-@use 'sass:map';
-@use '@angular/material' as mat;
-@use '../core/theming/palette';
+@use '@finastra/fds-theme/color' as color;
+@use '@finastra/fds-theme/typography' as typography;
 
-@mixin theme($theme) {
-  $primary: map.get($theme, primary);
-  $foreground: map.get($theme, foreground);
+@mixin theme($theme: null) {
 
   .uxg-ol {
     *::before {
-      color: map-get($primary, default-contrast);
-      background: palette.get-color-from-palette($primary, default);
+      @include color.color(primary);
+      @include color.property(background-color, primary);
     }
   }
 
   .mat-list-base.mat-nav-list {
     &.uxg-link-list {
       .mat-list-item {
-        color: palette.get-color-from-palette($primary, default);
+        @include color.color(primary);
       }
     }
 
@@ -26,24 +23,24 @@
         border-left-color: transparent;
 
         &:hover {
-          background-color: palette.get-color-from-palette($primary, default, 0.04);
-          border-color: palette.get-color-from-palette($primary, default, 0.2);
+          @include color.property(background-color, secondary);
+          @include color.property(border-color, primary);
         }
 
         .mat-icon {
-          color: palette.get-color-from-palette($foreground, text, 0.25);
+          @include color.color(foreground, 0.25);
         }
 
         .mat-ripple-element {
-          background-color: palette.get-color-from-palette($primary, default, 0.1);
+          @include color.property(background-color, primary);
         }
 
         &.uxg-list-item-selected {
-          color: palette.get-color-from-palette($primary, default);
-          border-color: palette.get-color-from-palette($primary, default);
+          @include color.color(primary);
+          @include color.property(border-color, primary);
 
           .mat-icon {
-            color: palette.get-color-from-palette($primary, default, 0.5);
+            @include color.color(primary);
           }
         }
       }
@@ -51,26 +48,26 @@
   }
 }
 
-@mixin typography($config) {
+@mixin typography($config: null) {
   .uxg-nav-list.mat-nav-list.mat-list-base {
     & .mat-list-item > * {
-      @include mat.typography-level($config, subtitle-1);
+      @include typography.typography(subtitle-1);
     }
   }
 
   .mat-list-base.mat-nav-list.uxg-link-list {
     & .mat-list-item > * {
-      @include mat.typography-level($config, caption);
+      @include typography.typography(caption);
     }
   }
 
   .uxg-ol {
     *::before {
-      @include mat.typography-level($config, h6);
+      @include typography.typography(h6);
     }
 
     .uxg-ol-title {
-      @include mat.typography-level($config, subtitle-1);
+      @include typography.typography(subtitle-1);
     }
   }
 }
