--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -1,7 +1,13 @@
 @use 'angular-theme' as fds;
 @use 'angular-theme/base';
+@use 'angular-components/banner/src/banner.theme' as banner; 
+
+
 
 @include fds.uxg-core();
+@include banner.color();
+
+
 
 @mixin app-theme($theme) {
   @include fds.uxg-material-theme($theme);
