--- a/libs/angular-components/banner/src/banner.component.html
+++ b/libs/angular-components/banner/src/banner.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngFor="let bannerItem of banners; last as islast; trackBy: trackByFn">
   <div class="uxg-banner-item">
     <span
-      [ngClass]="{ 'uxg-display-3': !small, 'uxg-banner-item--smal-label': small }"
+      [ngClass]="{ 'uxg-banner-item-label': !small, 'uxg-banner-item--smal-label': small }"
       matTooltip="{{ bannerItem.tooltip }}"
       #tooltip="matTooltip"
       >{{ bannerItem.text }}</span
     >
-    <span>{{ bannerItem.name }}</span>
+    <span   [ngClass]="{ 'uxg-banner-item-name': !small, 'uxg-banner-item--smal-name': small }">{{ bannerItem.name }}</span>
   </div>
   <div class="uxg-banner-spliter"></div>
 </ng-container>
