--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -2,4 +2,5 @@
 @import './lib/breadcrumb/breadcrumb';
 @import './lib/button/button';
 @import './lib/icon/icon';
+@import './lib/link/link-theme';
 @import './lib/list/list-base';
