--- a/libs/angular-theme/lib/link/_link-theme.scss
+++ b/libs/angular-theme/lib/link/_link-theme.scss
@@ -1,12 +1,12 @@
-@use '@finastra/fds-theme/color' as fds;
+@use '@finastra/fds-theme/color' as color;
 
-@mixin color() {
+@mixin theme($theme: null) {
   .uxg-link {
-    @include fds.color(primary);
+    @include color.color(primary);
     text-decoration: underline;
 
     &:hover {
-      @include fds.color(secondary);
+      @include color.color(secondary);
     }
   }
 }
