--- a/apps/angular-test-app/src/app/app.component.html
+++ b/apps/angular-test-app/src/app/app.component.html
@@ -5,7 +5,7 @@
         <mat-card class="uxg-card-product" extra-dense routerLink="/">
           <span class="uxg-h5 uxg-card-product-name">DS</span>
         </mat-card>
-        <h6 class="uxg-h6">Angular</h6>
+        <h6 class="uxg-h6">ANGULAR COMPONENTS</h6>
       </div>
       <mat-nav-list class="uxg-nav-list" (click)="sidenav.toggle()" dense>
         <ng-container *ngFor="let nestedRoute of nestedRoutes">
@@ -26,7 +26,7 @@
         </button>
         <div class="uxg-toolbar-logo-small"></div>
         <ul class="uxg-breadcrumb">
-          <li class="uxg-h6"><a routerLink="/">Angular</a></li>
+          <li class="uxg-h6"><a routerLink="/">ANGULAR COMPONENTS</a></li>
           <li *ngIf="title">{{ title }}</li>
         </ul>
         <span class="fill-remaining-space"></span>
