--- a/libs/angular-theme/lib/core/layout/_flex.scss
+++ b/libs/angular-theme/lib/core/layout/_flex.scss
@@ -351,6 +351,10 @@ $fx-media-queries: (
   }
 }
 
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+
 // mixins
 
 @mixin flex-size-classes($values: 20 33 66 80) {
