Migrate Table to ng15

--- a/libs/angular-components/table/src/table.component.scss
+++ b/libs/angular-components/table/src/table.component.scss
@@ -15,7 +15,7 @@ uxg-table {
     overflow: auto;
   }
 
-  .mat-table {
+  .mat-mdc-table {
     width: 100%;
 
     tr {
@@ -43,7 +43,7 @@ uxg-table {
           height: 32px;
           &.uxg-table-row-edit {
             input {
-              width: 100%;
+              width: 90%;
               height: 24px;
             }
           }
@@ -53,25 +53,25 @@ uxg-table {
           text-align: center;
         }
 
-        &.left {
+        &.uxg-table-cell-left {
           text-align: left;
         }
-        &.right {
+        &.uxg-table-cell-right {
           text-align: right;
         }
-        &.center {
+        &.uxg-table-cell-center {
           text-align: center;
         }
 
-        &.right div {
+        &.uxg-table-cell-right div {
           float: right;
           display: block;
         }
-        &.left div {
+        &.uxg-table-cell-left div {
           float: left;
           display: block;
         }
-        &.center div {
+        &.uxg-table-cell-center div {
           float: center;
           display: block;
         }
@@ -88,22 +88,22 @@ uxg-table {
           &.uxg-table-action-column-header {
             text-align: center;
           }
-          &.right div {
+          &.uxg-table-cell-right div {
             display: flex;
             flex-direction: row-reverse;
             place-content: center flex-start;
             align-items: center;
-            .mat-sort-header-arrow {
+            .mat-mdc-sort-header-arrow {
               margin-left: 0px;
               margin-right: 6px;
             }
           }
-          &.left div {
+          &.uxg-table-cell-left div {
             display: flex;
             place-content: center flex-start;
             align-items: center;
           }
-          &.center div {
+          &.uxg-table-cell-center div {
             display: flex;
             place-content: center;
             align-items: center;
