--- a/apps/angular-test-app/src/app/components/table-demo/table-demo.component.scss
+++ b/apps/angular-test-app/src/app/components/table-demo/table-demo.component.scss
@@ -12,10 +12,15 @@ ffdc-table-demo {
       }
     }
   }
+
+  .mat-mdc-text-field-wrapper {
+    height: 56px;
+  }
+
   .config-block {
     div {
       margin-bottom: 5px;
-      .mat-slide-toggle {
+      .mat-mdc-slide-toggle {
         margin-right: 5px;
       }
     }
@@ -31,17 +36,20 @@ ffdc-table-demo {
   }
 }
 
-:host ::ng-deep .mat-form-field-wrapper {
+:host ::ng-deep .mat-mdc-form-field-wrapper {
   padding-bottom: 0;
 }
-:host ::ng-deep .mat-form-field-flex > .mat-form-field-infix {
+:host ::ng-deep .mat-mdc-form-field-flex > .mat-mdc-form-field-infix {
   padding: 0.4em 0px !important;
 }
-:host ::ng-deep .mat-form-field-label-wrapper {
+:host ::ng-deep .mat-mdc-form-field-label-wrapper {
   top: -1.5em;
 }
 
-:host ::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+:host
+  ::ng-deep
+  .mat-mdc-form-field-appearance-outline.mat-mdc-form-field-can-float.mat-mdc-form-field-should-float
+  .mat-mdc-form-field-label {
   transform: translateY(-1.1em) scale(0.75);
   width: 133.33333%;
 }
