--- a/libs/angular-components/table/src/table.component.html
+++ b/libs/angular-components/table/src/table.component.html
@@ -45,9 +45,9 @@
         (cdkDragStarted)="columnDragStarted($event, columnIndex)"
         [cdkDragDisabled]="!columnDragEnable"
         [ngClass]="{
-          left: column.align === 'left',
-          center: column.align === 'center',
-          right: column.align === 'right'
+          'uxg-table-cell-left': column.align === 'left',
+          'uxg-table-cell-center': column.align === 'center',
+          'uxg-table-cell-right': column.align === 'right'
         }"
       >
         {{ column.displayName ? column.displayName : column.name }}
@@ -56,9 +56,9 @@
         mat-cell
         *matCellDef="let element"
         [ngClass]="{
-          left: column.align === 'left',
-          center: column.align === 'center',
-          right: column.align === 'right'
+          'uxg-table-cell-left': column.align === 'left',
+          'uxg-table-cell-center': column.align === 'center',
+          'uxg-table-cell-right': column.align === 'right'
         }"
       >
         <!-- view cell, display data cell according to the type -->
@@ -110,9 +110,9 @@
         mat-footer-cell
         *matFooterCellDef
         [ngClass]="{
-          left: column.align === 'left',
-          center: column.align === 'center',
-          right: column.align === 'right'
+          'uxg-table-cell-left': column.align === 'left',
+          'uxg-table-cell-center': column.align === 'center',
+          'uxg-table-cell-right': column.align === 'right'
         }"
       >
         {{ getTotalRowCell(column) }}
