--- a/libs/angular-theme/lib/paginator/_paginator-base.scss
+++ b/libs/angular-theme/lib/paginator/_paginator-base.scss
@@ -3,37 +3,37 @@
 $uxg-paginator-height: 44px;
 $uxg-paginator-icon-height: 20px;
 
-.mat-paginator {
+.mat-mdc-paginator {
   height: $uxg-paginator-height;
 
-  .mat-paginator-container {
+  .mat-mdc-paginator-container {
     height: $uxg-paginator-height;
     min-height: $uxg-paginator-height;
 
-    .mat-paginator-page-size {
+    .mat-mdc-paginator-page-size {
       height: $uxg-paginator-height;
 
-      .mat-paginator-page-size-select {
+      .mat-mdc-paginator-page-size-select {
         margin: $uxg-spacing-0;
       }
 
-      .mat-paginator-page-size-label {
+      .mat-mdc-paginator-page-size-label {
         margin-right: $uxg-spacing-2;
       }
     }
 
-    .mat-paginator-range-actions {
-      .mat-paginator-range-label {
+    .mat-mdc-paginator-range-actions {
+      .mat-mdc-paginator-range-label {
         margin-right: $uxg-spacing-5;
       }
 
-      .mat-icon-button {
-        .mat-button-wrapper {
+      .mat-mdc-icon-button {
+        .mat-mdc-button-wrapper {
           align-items: center;
           justify-content: center;
         }
 
-        .mat-paginator-icon {
+        .mat-mdc-paginator-icon {
           width: $uxg-paginator-icon-height;
           height: $uxg-paginator-icon-height;
         }
