--- a/libs/angular-theme/lib/select/_select-base.scss
+++ b/libs/angular-theme/lib/select/_select-base.scss
@@ -1,13 +1,13 @@
-.mat-form-field-appearance-fill {
-  .mat-select {
-    .mat-select-arrow-wrapper {
+.mat-mdc-form-field-appearance-fill {
+  .mat-mdc-select {
+    .mat-mdc-select-arrow-wrapper {
       transform: translateY(-25%);
     }
   }
 
-  &:not(.mat-form-field-has-label) {
-    .mat-select {
-      .mat-select-arrow-wrapper {
+  &:not(.mat-mdc-form-field-has-label) {
+    .mat-mdc-select {
+      .mat-mdc-select-arrow-wrapper {
         transform: none;
       }
     }
