--- a/libs/angular-theme/lib/slide-toggle/_slide-toggle-theme.scss
+++ b/libs/angular-theme/lib/slide-toggle/_slide-toggle-theme.scss
@@ -6,17 +6,17 @@
   $primary: map.get($theme, primary);
   $accent: map.get($theme, accent);
 
-  .mat-slide-toggle.mat-checked {
-    &.mat-accent .mat-slide-toggle-bar {
+  .mat-mdc-slide-toggle.mat-checked {
+    &.mat-mdc-accent .mat-mdc-slide-toggle-bar {
       background-color: palette.get-color-from-palette($accent, default, 0.54);
     }
 
-    &.mat-primary .mat-slide-toggle-bar {
+    &.mat-mdc-primary .mat-mdc-slide-toggle-bar {
       background-color: palette.get-color-from-palette($primary, default, 0.54);
     }
   }
 
-  .mat-slide-toggle-thumb {
+  .mat-mdc-slide-toggle-thumb {
     border-color: palette.get-color-from-palette($foreground, divider);
   }
 }
