--- a/libs/angular-theme/lib/table/_table-base.scss
+++ b/libs/angular-theme/lib/table/_table-base.scss
@@ -4,7 +4,7 @@ $uxg-table-cell-icon-margin: $uxg-spacing-2;
 $uxg-table-cell-margin: $uxg-spacing-3;
 $uxg-table-row-height: 44px;
 
-.mat-table {
+.mat-mdc-table {
   tr {
     th,
     td {
@@ -62,15 +62,15 @@ $uxg-table-row-height: 44px;
     }
   }
 
-  td.mat-cell:first-of-type,
-  td.mat-footer-cell:first-of-type,
-  th.mat-header-cell:first-of-type {
+  td.mat-mdc-cell:first-of-type,
+  td.mat-mdc-footer-cell:first-of-type,
+  th.mat-mdc-header-cell:first-of-type {
     padding-left: $uxg-spacing-3;
   }
 
-  td.mat-cell:last-of-type,
-  td.mat-footer-cell:last-of-type,
-  th.mat-header-cell:last-of-type {
+  td.mat-mdc-cell:last-of-type,
+  td.mat-mdc-footer-cell:last-of-type,
+  th.mat-mdc-header-cell:last-of-type {
     padding-right: $uxg-spacing-3;
   }
 }
