--- a/libs/angular-theme/lib/table/_table-theme.scss
+++ b/libs/angular-theme/lib/table/_table-theme.scss
@@ -5,7 +5,7 @@
 @mixin theme($theme) {
   $primary: map.get($theme, primary);
 
-  .mat-table {
+  .mat-mdc-table {
     tr {
       &.selected {
         background-color: palette.get-color-from-palette($primary, darker, 0.07);
@@ -27,7 +27,7 @@
 }
 
 @mixin typography($config: null) {
-  .mat-table {
+  .mat-mdc-table {
     thead {
       tr {
         font-family: mat.font-family($config, subtitle-2);
