--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -4,4 +4,6 @@
 @import './lib/badge/badge';
 @import './lib/breadcrumb/breadcrumb';
 @import './lib/button/button';
+@import './lib/expansion/expansion';
+@import './lib/form-field/form-field';
 @import './lib/icon/icon';
