--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -13,8 +13,8 @@
 @use '../../breadcrumb/breadcrumb-theme';
 // @use '../../card/card-theme';
 @use '../../chips/chips-theme';
-// @use '../../expansion/expansion-theme';
-// @use '../../form-field/form-field-theme';
+@use '../../expansion/expansion-theme';
+@use '../../form-field/form-field-theme';
 @use '../../icon/icon-theme';
 // @use '../../link/link-theme';
 // @use '../../list/list-theme';
@@ -77,8 +77,8 @@
   // @include breadcrumb-theme.theme($theme);
   // @include card-theme.theme($theme);
   @include chips-theme.theme($theme);
-  // @include expansion-theme.theme($theme);
-  // @include form-field-theme.theme($theme);
+  @include expansion-theme.theme($theme);
+  @include form-field-theme.theme($theme);
   @include icon-theme.theme($theme);
   // @include link-theme.theme($theme);
   // @include list-theme.theme($theme);
