--- a/libs/angular-theme/lib/core/typography/_all-typography.scss
+++ b/libs/angular-theme/lib/core/typography/_all-typography.scss
@@ -6,7 +6,7 @@
 // @use '../../breadcrumb/breadcrumb-theme';
 // @use '../../card/card-theme';
 @use '../../chips/chips-theme';
-// @use '../../form-field/form-field-theme';
+@use '../../form-field/form-field-theme';
 // @use '../../list/list-theme';
 // @use '../../table/table-theme';
 
@@ -20,7 +20,7 @@
   // @include breadcrumb-theme.typography($config);
   // @include card-theme.typography($config);
   @include chips-theme.typography($config);
-  // @include form-field-theme.typography($config);
+  @include form-field-theme.typography($config);
   // @include list-theme.typography($config);
   // @include table-theme.typography($config);
 }
