--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -3,4 +3,5 @@
 @import './lib/button/button';
 @import './lib/icon/icon';
 @import './lib/link/link-theme';
-@import './lib/list/list-base';
+@import './lib/list/list';
+@import './lib/sidenav/sidenav';
