--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -20,7 +20,7 @@
 @use '../../list/list-theme';
 // @use '../../logo/logo-theme';
 // @use '../../menu/menu-theme';
-// @use '../../sidenav/sidenav-theme';
+@use '../../sidenav/sidenav-theme';
 // @use '../../slide-toggle/slide-toggle-theme';
 // @use '../../table/table-theme';
 // @use '../../tabs/tabs-theme';
@@ -84,7 +84,7 @@
   @include list-theme.theme($theme);
   // @include logo-theme.theme($theme);
   // @include menu-theme.theme($theme);
-  // @include sidenav-theme.theme($theme);
+  @include sidenav-theme.theme($theme);
   // @include slide-toggle-theme.theme($theme);
   // @include table-theme.theme($theme);
   // @include tabs-theme.theme($theme);
