--- a/libs/angular-theme/lib/sidenav/_sidenav-theme.scss
+++ b/libs/angular-theme/lib/sidenav/_sidenav-theme.scss
@@ -1,23 +1,19 @@
-@use 'sass:map';
-@use '../core/theming/palette';
+@use '@finastra/fds-theme/color';
 
 @mixin theme($theme) {
-  $background: map.get($theme, background);
-  $foreground: map.get($theme, foreground);
-
   .uxg-nav {
-    background-color: map.get($background, background);
+    @include color.property(background, background);
 
     .mat-drawer {
-      background-color: map.get($background, card);
+      @include color.property(background, surface);
 
       .uxg-nav-header {
-        background-color: map.get($background, background);
+        @include color.property(background, background);
       }
     }
 
     .mat-drawer-backdrop.mat-drawer-shown {
-      background-color: palette.get-color-from-palette($foreground, base, 0.1);
+      background-color: #4141411a;
     }
   }
 }
