fix icon position

--- a/libs/angular-components/breadcrumb/src/breadcrumb.component.html
+++ b/libs/angular-components/breadcrumb/src/breadcrumb.component.html
@@ -29,7 +29,7 @@
                 mat-list-item
               >
                 <mat-icon mat-list-icon>{{ item.icon ? item.icon : 'filter_none' }}</mat-icon>
-                <p>{{ item.label }}</p>
+                <span>{{ item.label }}</span>
               </a>
             </mat-nav-list>
           </mat-menu>
