--- a/libs/angular-theme/lib/breadcrumb/_breadcrumb.scss
+++ b/libs/angular-theme/lib/breadcrumb/_breadcrumb.scss
@@ -61,13 +61,18 @@ $back-button-icon-size: 18px;
 }
 
 .uxg-breadcrumb-menu {
+  
   .mat-mdc-nav-list.mat-mdc-nav-list.mat-mdc-list-base > .mdc-list-item:last-of-type,
   .uxg-nav-list-level.mat-mdc-nav-list.mat-mdc-list-base > .mdc-list-item:last-of-type {
     margin-bottom: 0 !important;
   }
 
+  .mat-mdc-menu-content{
+    padding: 0 !important;
+  }
+
   .mat-mdc-list-base {
-    padding-top: 0 !important;
+    padding: 0 !important;
   }
 }
 
