--- a/libs/angular-theme/lib/list/_list-theme.scss
+++ b/libs/angular-theme/lib/list/_list-theme.scss
@@ -22,14 +22,7 @@
         border-left-color: transparent;
 
         &:hover {
-          @include color.property(background-color, primary);
-          opacity: 0.04;
-
-          @include color.property(border-color, primary);
-          opacity: 0.2;
-
-          @include color.property(background-color, primary);
-          opacity: 0.1;
+          @include color.property(border-color, outline-info);
         }
 
         .mat-icon {
